# xhbx-knowledge-processing

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  启动文档.md
docs/superpowers/plans/: 2026-06-26-case-sales-insights-implementation.md
docs/superpowers/specs/: 2026-06-26-case-sales-insights-design.md
src/insurance_coach_agents/: __init__.py  cli.py  config.py  logging_config.py  models.py  output_writer.py  pipeline.py  provenance.py  sales_output_writer.py  sales_pipeline.py  web.py  web_tasks.py
src/insurance_coach_agents/agents/: __init__.py  assessor.py  cleanup.py  enrich.py  extractor.py  factory.py  prompts.py  reviewer.py  reviser.py  sales_insights.py  structured_model.py  vision.py
src/insurance_coach_agents/parsers/: __init__.py  docx_parser.py  grouping.py  image_extract.py  pdf_parser.py  pptx_parser.py  section_loader.py  txt_parser.py
src/insurance_coach_agents/web_static/: app.css  app.js  index.html
tests/: test_agents.py  test_cleanup.py  test_cli_sales_insights.py  test_logging_config.py  test_models.py  test_no_prints.py  test_parsers.py  test_pipeline.py  test_sales_insight_agents.py  test_sales_insight_models.py  test_sales_output_writer.py  test_sales_pipeline.py  test_structured.py  test_vision.py  test_web_app.py  test_web_static_assets.py  test_web_tasks.py
