[project]
name = "xhbx"
version = "0.1.0"
description = "AgentScope-powered insurance coach knowledge extraction to Markdown."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentscope>=2.0.2",
    "fastapi>=0.124.2",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "uvicorn>=0.38.0",
]

[project.scripts]
insurance-coach-md = "insurance_coach_agents.cli:main"
insurance-coach-web = "insurance_coach_agents.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_coach_agents"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
